added cake and blowing functionality

--- a/index.html
+++ b/index.html
@@ -1,11 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="index.css">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <button onclick="initMicrophone()">Start Microphone</button>
+    <div class="candle">
+        <div id="flame" class="lit"></div>
+    </div>
+
+    <div class="cake">
+        <div class="plate"></div>
+    </div>
+
+    <div>
+        <p id="text">sdfsdf</p>
+    </div>
+    <script src="./script.js"></script>
 </body>
+
 </html>
