added smoke on extinguished candle

--- a/index.html
+++ b/index.html
@@ -9,18 +9,19 @@
 </head>
 
 <body>
-    <button onclick="initMicrophone()">Start Microphone</button>
+    <button onclick="initMicrophone()">Light The Candle</button>
     <div class="candle">
-        <div id="flame" class="lit"></div>
+        <div id="flame" class="out" ></div>
     </div>
 
     <div class="cake">
         <div class="plate"></div>
     </div>
+    
 
-    <div>
-        <p id="text">sdfsdf</p>
-    </div>
+    <!-- <div>
+      <p id="text">sdfsdf</p> 
+    </div> -->
     <script src="./script.js"></script>
 </body>
 
