styled button and added text

--- a/index.html
+++ b/index.html
@@ -5,23 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <!-- for font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
     <button onclick="initMicrophone()">Light The Candle</button>
     <div class="candle">
-        <div id="flame" class="out" ></div>
+        <div id="flame" class="out"></div>
     </div>
 
     <div class="cake">
         <div class="plate"></div>
     </div>
-    
 
-    <!-- <div>
-      <p id="text">sdfsdf</p> 
-    </div> -->
+
+    <div class="text">
+        <p id="text"></p>
+    </div>
     <script src="./script.js"></script>
 </body>
 
