added a birthday card

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <div class="text">
         <p id="text"></p>
     </div>
+
+    <a href="card.html" class="link">Next Page</a>
     <script src="./script.js"></script>
 </body>
 
