--- a/card.html
+++ b/card.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Style+Script&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Birthday Card</title>
 </head>
 
 <body>
@@ -24,7 +24,7 @@
             <p id="head">Happy Birthday Again</p>
             <p>I hope your special day will bring you lots of happiness, love, and fun. You deserve them a lot. Enjoy!
             </p>
-            <p id="tail">Hope your day goes great!</p>
+            <p id="tail">Hope your year goes great!</p>
         </div>
     </div>
     <a href="index.html" class="link">Previous Page</a>
